# fin_alpha_cn_agent

./: .gitignore  AlphaAgent_作品设计书_15页终稿.docx  PROJECT_SPEC.md  README.md  pyproject.toml  start_demo.py  作品设计书_撰写稿.md  启动AlphaAgent演示.bat  因子与选股策略说明.md
backend/: demo_server.py  main.py  state.py
backend/models/: api_models.py
backend/routers/: __init__.py  analysis.py  demo.py
backend/services/: analysis.py  demo.py
data/: xgb_scorer.model
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: rendered-html.test.mjs
logs/: advice_20260515_20260522_s500.json  backtest_20260515_20260522_s500.csv
logs/advice_20260515_20260522_s500/: 20260518.json  20260519.json  20260520.json  20260521.json  20260522.json
logs/factor_analysis/: final_default_comparison.csv  final_performance_metrics.csv  validation_report.md
scripts/: analyze_factor_ic.py
src/: backtest_stock_agent.py  main_stock_agent.py
src/agents/: market_data.py  portfolio_manager.py  risk_manager.py
src/execution/: __init__.py  output_formatter.py  position_sizer.py
src/factors/: __init__.py  alphanet_features.py  capital_flow.py  factor_neutralize.py  price_volume.py
src/models/: stock_screener.py  train_xgboost.py  xgboost_scorer.py
src/network/: proxy_manager.py
src/tools/: baostock_client.py
tests/: test_demo_service.py
