[project]
name = "alphaagent-ashare"
version = "0.1.0"
description = "AlphaAgent: an explainable A-share quantitative stock-selection agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain==0.3.0",
    "langchain-openai==0.2.11",
    "langgraph==0.2.56",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "python-dotenv==1.0.0",
    "matplotlib>=3.9.2,<4.0.0",
    "yfinance>=0.2.51,<0.3.0",
    "akshare>=1.11.22,<2.0.0",
    "baostock>=0.8.9,<0.9.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "openai>=1.12.0,<2.0.0",
    "langchain-core>=0.3.29,<0.4.0",
    "google-generativeai>=0.3.0,<0.4.0",
    "backoff>=2.2.1,<3.0.0",
    "google-genai>=0.6.0,<0.7.0",
    "uvicorn>=0.34.0,<0.35.0",
    "fastapi>=0.115.12,<0.116.0",
    "playwright>=1.52.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
]

[tool.poetry]
name = "alphaagent-ashare"
version = "0.1.0"
description = "AlphaAgent: an explainable A-share quantitative stock-selection agent"
authors = ["AlphaAgent Team"]
readme = "README.md"
packages = [
    { include = "src" }
]
[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.3.0"
langchain-openai = "0.2.11"
langgraph = "0.2.56"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
yfinance = "^0.2.51"
akshare = "^1.11.22"
baostock = "^0.8.9"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
openai = "^1.12.0"
langchain-core = "^0.3.29"
google-generativeai = "^0.3.0"
backoff = "^2.2.1"
google-genai = "^0.6.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
playwright = "^1.52.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://repo.huaweicloud.com/repository/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
